@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+17-Nov-2003
+~~~~~~~~~~~
+Renamed 'Info' menu item to 'Properties'.
+
 31-Oct-2003
 ~~~~~~~~~~~
 If a panel icon has an empty label, show it full size (requested by Stephen
